create a signin , signup, profile pages and trying authorization without cookie

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,13 @@
+<link rel="stylesheet" href="/css/layout.css">
 <h1>
     Codeial / <%= title %>
 </h1>
+
+<h4>
+    <a href="/users/login">Login</a> <br>
+    or <br>
+    <a href="/users/create">Register</a>
+</h4>
+
+
         
