--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,3 +1,7 @@
 
 <h1>User : <%= user.name %></h1>
 <h1>Email : <%= user.email %></h1>
+<p><form action="/users/delete-session" method = "post">
+    <button type = "submit">sign-out</button>
+</form>
+</p>
