setup sass with the help of node-sass-middleware which is now depricated and not install directly but you can install it by downgrading the node version on downloading the node-sass-middleware package by github and extract it into the node_module folder and the setup the header and footer

--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,5 +1,7 @@
-body{
-    background-image: radial-gradient(royalblue,violet);
-    text-align: center;
-    color:wheat;
+body {
+  margin: 0;
+}
+
+body main {
+  height: 100%;
 }
