--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,3 +1,26 @@
 <header>
-    this is header which is common
+    <div id="cnt">
+        <div id="title">
+            <h3>
+                <a href="/">Codeial</a>
+                
+            </h3>
+        </div>
+        <div id="user-signin-signup">
+            <%if(locals.user){%>
+                <h4>
+                    <%= locals.user.name%>
+                    <a href="/users/userPage">Profile</a>
+                </h4>
+                    
+            <%}else{%>
+                <h4>
+                    <a href="/users/login">Login</a> 
+                    or 
+                    <a href="/users/create">Register</a>
+                </h4>
+            <%}%>
+        </div>
+    </div>
+    
 </header>
