--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,12 +4,16 @@
             <%= title %>
         </title>
         <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="/css/header.css">
+        <link rel="stylesheet" href="/css/footer.css">
     </head>
     <body>
 
         <%-include('_header');%>
-       
-        <%- body %>
+        <main>
+            <%- body %>
+        </main>
+        
 
         <%-include('_footer');%>
 
