--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,6 +10,25 @@
         <br>
         <a href="/users/userPage">Go To Profile</a>
     </h4>
+    <section id = "feed-posts">
+        <h4>Posts</h4>
+        <form action="/posts/create" method = "POST">
+            <textarea name="content" id="content" cols="30" rows="3" placeholder="type here ..." required></textarea>
+            <input type="submit" value="Post">
+        </form>
+    </section>
+    <div id="posts-list-container">
+        <ul id = "post-list">
+            <% for(post of posts){ %> 
+                <li>
+                    <div id="userName-PostContent">
+                        <h4><%= post.user.name %></h4>
+                        <h5><%= post.content %></h5>
+                    </div>
+                </li>
+            <% } %>
+        </ul>
+    </div>
         
 <%}else{%>
     <h4>
