setup the comment schema and added comment on posts and display the comment on home when someone is logged In and also updated the post schema by addig one more field comments which is a array of objects which contains objectId of all comments on a post

--- a/assets/scss/header.scss
+++ b/assets/scss/header.scss
@@ -1,5 +1,6 @@
 header{
-    background-color: royalblue;
+    width: 95%;
+    background-color: #4B0082;
     #cnt{
         display: flex;
         justify-content: space-between;
