--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,7 +1,22 @@
 body {
+  background-color: lightcyan;
   margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 body main {
-  height: 100%;
+  min-height: 100%;
+  width: 95%;
+}
+
+body main .section-title {
+  text-align: center;
+  background-color: cornflowerblue;
+}
+
+body main section {
+  margin: 5px 0px;
 }
