--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,19 @@
 body{
+    background-color: lightcyan;
     margin:0;
+    display : flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     main{
-        height : 100%;
+        min-height : 100%;
+        width: 95%;
+        .section-title{
+            text-align: center;
+            background-color: cornflowerblue;
+        }
+        section{
+            margin : 5px 0px;
+        }
     }
 }
