--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,29 +1,65 @@
-<link rel="stylesheet" href="/css/layout.css">
-<h1>
+<link rel="stylesheet" href="/css/home.css">
+<h1 class = 'section-title'>
     Codeial / <%= title %>
 </h1>
 
 
 <%if(locals.user){%>
-    <h4>
-        User Name : <%= locals.user.name%>
-        <br>
-        <a href="/users/userPage">Go To Profile</a>
-    </h4>
+    <div id="user-details">
+        <h4>
+            User Name : <%= locals.user.name%>
+            <br>
+            <a href="/users/userPage">Go To Profile</a>
+        </h4>
+    </div>
+    
     <section id = "feed-posts">
-        <h4>Posts</h4>
+        <h2 class = 'section-title'>post something</h2>
         <form action="/posts/create" method = "POST">
             <textarea name="content" id="content" cols="30" rows="3" placeholder="type here ..." required></textarea>
             <input type="submit" value="Post">
         </form>
     </section>
     <div id="posts-list-container">
+        <h2 class = 'section-title'>feeds</h2>
         <ul id = "post-list">
             <% for(post of posts){ %> 
                 <li>
                     <div id="userName-PostContent">
-                        <h4><%= post.user.name %></h4>
-                        <h5><%= post.content %></h5>
+                        <div class="userPosted">
+                            <p><%= post.user.name %></p>
+                        </div>
+                        <div id="postContent">
+                            <p><%= post.content %></p>
+                            <div id="addComment">
+                                <form action="/comments/addComment" method="post">
+                                    <input type="text" name = 'content' placeholder="Add Comment....">
+                                    <input id ="hidden" type="text" name="post" value = <%= post._id%> >
+                                    <input type="submit" value="Comment">
+                                </form>
+                            </div>
+                            <div id="showComments">
+                                <h3 class = "section-title">Comments</h3>
+                                <% if(post.comments.length == 0){%>
+                                    <div>
+                                        <p style="text-align: center">NO Comments</p>
+                                    </div>
+                                <%}%>
+                                <ul>
+                                    <% for(cmnt of post.comments){ %>
+                                        <li>
+                                            <div>
+                                                <div class="userPosted">
+                                                    <p><%= cmnt.user.name %></p>
+                                                </div>
+                                                <p><%=cmnt.content%></p>
+                                            </div>
+                                        </li>
+                                    <%}%>
+                                </ul>
+                            </div>
+                        </div>
+                        
                     </div>
                 </li>
             <% } %>
