--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -41,6 +41,7 @@
   margin: 2px;
   padding: 3px;
   width: 80%;
+  background-color: inherit;
 }
 
 #posts-list-container ul li #postContent #addComment #hidden {
