--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -36,6 +36,7 @@
                         margin:2px;
                         padding : 3px;
                         width:80%;
+                        background-color: inherit;
                     }
                     #hidden{
                         display: none;
