setup delete functionality for comments and authorized user can delete a comment or post

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -58,6 +58,9 @@
                                                 <div class="userPosted">
                                                     <p><%= cmnt.user.name %></p>
                                                 </div>
+                                                <%if(locals.user.id == cmnt.user.id){%>
+                                                    <a href="/comments/delete/<%=cmnt.id%>"><button>Delete</button></a>
+                                                <%}%>
                                                 <p><%=cmnt.content%></p>
                                             </div>
                                         </li>
