--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -10,7 +10,7 @@
             <%if(locals.user){%>
                 <h4>
                     <%= locals.user.name%>
-                    <a href="/users/userPage">Profile</a>
+                    <a href="/users/profile">Profile</a>
                 </h4>
                     
             <%}else{%>
