--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,3 +1,12 @@
+#login-signup {
+  text-align: center;
+  width: 100%;
+}
+
+#section1 {
+  width: 68%;
+}
+
 #user-details {
   border: 2px dashed blueviolet;
   text-align: center;
@@ -8,11 +17,7 @@
   text-align: center;
 }
 
-#posts-list-container {
-  border: 2px dashed blueviolet;
-}
-
-#posts-list-container ul li {
+#posts-list-container ul li, #user-list-container ul li {
   list-style-type: none;
   display: flex;
   flex-direction: column;
@@ -22,7 +27,7 @@
   margin: 3px;
 }
 
-#posts-list-container ul li .userPosted {
+#posts-list-container ul li .userPosted, #user-list-container ul li .userPosted {
   line-height: 6px;
   width: 100%;
   border: dashed violet;
@@ -31,25 +36,33 @@
   border-width: 2px 0px;
 }
 
-#posts-list-container ul li #postContent {
+#posts-list-container ul li #postContent, #user-list-container ul li #postContent {
   margin: 2px 0px;
   border: 1px solid violet;
   background-color: lightseagreen;
 }
 
-#posts-list-container ul li #postContent #addComment input[type='text'] {
+#posts-list-container ul li #postContent #addComment input[type='text'], #user-list-container ul li #postContent #addComment input[type='text'] {
   margin: 2px;
   padding: 3px;
   width: 80%;
   background-color: inherit;
 }
 
-#posts-list-container ul li #postContent #addComment #hidden {
+#posts-list-container ul li #postContent #addComment #hidden, #user-list-container ul li #postContent #addComment #hidden {
   display: none;
 }
 
-#posts-list-container ul li #postContent #showComments {
+#posts-list-container ul li #postContent #showComments, #user-list-container ul li #postContent #showComments {
   border: 1px solid black;
   background-color: lightgreen;
   color: black;
+}
+
+#user-list-container {
+  width: 28%;
+}
+
+#user-list-container ul {
+  text-align: center;
 }
