--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -1,3 +1,11 @@
+#login-signup{
+    text-align: center;
+    width:100%;
+
+}
+#section1{
+    width: 68%;
+}
 #user-details{
     border:2px dashed blueviolet;
     text-align: center;
@@ -6,8 +14,8 @@
     border:2px dashed blueviolet;
     text-align: center;
 }
-#posts-list-container{
-    border:2px dashed blueviolet;
+#posts-list-container , #user-list-container{
+    // border:2px dashed blueviolet;
     // text-align: center; 
     ul{
         li{
@@ -49,5 +57,11 @@
                 }
             }
         }
+    }
+}
+#user-list-container{
+    width:28%;
+    ul{
+        text-align: center;
     }
 }
