--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -3,6 +3,8 @@
         <title>
             <%= title %>
         </title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" integrity="sha512-0p3K0H3S6Q4bEWZ/WmC94Tgit2ular2/n0ESdfEX8l172YyQj8re1Wu9s/HT9T/T2osUw5Gx/6pAZNk3UKbESw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js" integrity="sha512-lOrm9FgT1LKOJRUXF3tp6QaMorJftUjowOWiDcG5GFZ/q7ukof19V0HKx/GWzXCdt9zYju3/KhBNdCLzK8b90Q==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
         <link rel="stylesheet" href="/css/layout.css">
         <link rel="stylesheet" href="/css/header.css">
         <link rel="stylesheet" href="/css/footer.css">
@@ -10,12 +12,42 @@
     <body>
 
         <%-include('_header');%>
+        <!-- <% if(locals.flash.success && locals.flash.success.length > 0) { %>
+            <div class="notification-flash">
+                <h5>
+                    <%= locals.flash.success %>
+                </h5>
+            </div>
+        <% } %> -->
         <main>
             <%- body %>
         </main>
         
 
         <%-include('_footer');%>
+
+        <!-- scripts -->
+        <script>
+            <% if(locals.flash.success && locals.flash.success.length > 0) { %>
+                new Noty({
+                    theme : 'relax',
+                    text: '<%= locals.flash.success %>',
+                    type : 'success',//<-- this is a color theme type
+                    layout : 'topRight',//<-- this defines where the notification will come in the screen
+                    timeout : 1500
+                }).show();
+            <% } %>
+
+            <% if(locals.flash.error && locals.flash.error.length > 0) { %>
+                new Noty({
+                    theme : 'relax',
+                    text: '<%= locals.flash.error %>',
+                    type : 'error',//<-- this is a color theme type
+                    layout : 'topRight',//<-- this defines where the notification will come in the screen
+                    timeout : 1500
+                }).show();
+            <% } %>
+        </script>
 
     </body>
 </html>
