impliment ajax on creating the post button to create a post without refreshing the page with the help of jQuery and setup a notification also . all the function is written in codeial/assets/js/home_posts.js file

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,6 +1,6 @@
 <ul id = "post-list">
     <% for(post of posts){ %> 
-        <li>
+        <li id = 'post-<%= post._id%>'>
             <div id="userName-PostContent">
                 <div class="userPosted">
                     <p><%= post.user.name %></p>
