--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,11 +6,13 @@
     </div>
 <%}else{%>
     <div class="user-details">
-        <% if(locals.user.avatar){ %>
         <div id="userImage">
-            <img src="<%= locals.user.avatar %>" alt="Profile Picture" height='200px' width = '200px'>
+            <% if(locals.user.avatar){ %>
+                <img src="<%= locals.user.avatar %>" alt="Profile Picture" height='200px' width = '200px'>
+            <%}else{%>
+                <img src="/images/default-avatar.png" alt="default-avatar" height='200px' width = '200px'>
+            <%}%>
         </div>
-        <% } %>
         <h1>User : <%= locals.user.name %></h1>
         <h1>Email : <%= locals.user.email %></h1>
         <p><form action="/users/delete-session" method = "post">
